# demo-ddms-speckit

./: .gitignore  CLAUDE.md  docker-compose.yml  requirements.md
backend/: .env.example  .flake8  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/src/: main.py
backend/src/api/: auth.py  dependencies.py  devices.py  errors.py  export.py  groups.py  notifications.py  readings.py  routes.py  schemas.py  users.py
backend/src/collectors/: device_manager.py  modbus_collector.py
backend/src/db/: base.py  init_default_data.py  session.py
backend/src/db/migrations/: env.py
backend/src/models/: __init__.py  configuration.py  device.py  device_group.py  group.py  notification.py  reading.py  user.py
backend/src/services/: auth_service.py  device_service.py  export_service.py  group_service.py  notification_service.py  reading_service.py  user_service.py
backend/src/utils/: auth.py  logging.py  metrics.py  rbac.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_api.py  test_device_crud.py  test_device_stream.py  test_export_api.py  test_group_api.py  test_historical_api.py  test_readings_api.py  test_user_api.py
backend/tests/integration/: test_device_status.py  test_modbus_collector.py  test_rbac.py  test_timescale_aggregates.py
backend/tests/unit/: test_auth.py
backend/tests/unit/collectors/: test_modbus_collector.py
backend/tests/unit/models/: test_configuration.py  test_device.py  test_reading.py  test_user.py
backend/tests/unit/services/: test_auth_service.py  test_device_service.py  (+2 more)
(+116 files in other folders)
